--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -1,4 +1,7 @@
 {
+    "extDesc": {
+        "message": "⭐Link Map - Professional Tab Manager"
+    },
     "search": {
         "message": "Search"
     },
@@ -52,5 +55,11 @@
     },
     "ctxMenuNotesCreateAsLastSubNode": {
         "message": "Create as Last Sub Node"
+    },
+    "importPageInfo": {
+        "message": "Drag and Drop the nodes below to the Link Map Tree to import the data."
+    },
+    "importPageExportTime": {
+        "message": "Backup Time"
     }
 }
