[feature] 支持让激活的窗口在树中可见的功能

--- a/public/_locales/zh/messages.json
+++ b/public/_locales/zh/messages.json
@@ -1,6 +1,6 @@
 {
     "extDesc": {
-        "message": "⭐Link Map - 专业标签管理工具"
+        "message": "⭐Link Map - 专业标签管理工具，构建自己的链接收藏夹"
     },
     "search": {
         "message": "搜索"
