[feature] add dark/light mode selection in settings

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -115,5 +115,17 @@
     },
     "tipsFinish": {
         "message": "Finish! you can delete these nodes now"
+    },
+    "appearance": {
+        "message": "Appearance"
+    },
+    "theme": {
+        "message": "Theme"
+    },
+    "themeLight": {
+        "message": "Light"
+    },
+    "themeDark": {
+        "message": "Dark"
     }
 }
