[optimize|shorcut] optimize performace and i18n for unset shorcut

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -131,6 +131,9 @@
     "commandTriggerLinkMap": {
         "message": "Open Link Map"
     },
+    "commandUnset": {
+        "message": "Not set"
+    },
     "goToPreviousNode": {
         "message": "Go to previous node"
     },
