[style] fix ui wrap in the edge browser

--- a/public/_locales/zh_CN/messages.json
+++ b/public/_locales/zh_CN/messages.json
@@ -24,7 +24,7 @@
         "message": "反馈"
     },
     "feedbackDesc": {
-        "message": "邮件反馈:"
+        "message": "反馈"
     },
     "ctxMenuEdit": {
         "message": "编辑"
