[optimize] change desc of dark mode in zh_cn

--- a/public/_locales/zh_CN/messages.json
+++ b/public/_locales/zh_CN/messages.json
@@ -126,7 +126,7 @@
         "message": "明亮模式"
     },
     "themeDark": {
-        "message": "暗黑模式"
+        "message": "黑暗模式"
     },
     "commandTriggerLinkMap": {
         "message": "打开Link Map"
