[feature] Add theme auto change by system color scheme in theme

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -122,6 +122,9 @@
     "theme": {
         "message": "Theme"
     },
+    "themeAuto": {
+        "message": "Auto"
+    },
     "themeLight": {
         "message": "Light"
     },
