--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -199,5 +199,8 @@
     },
     "expandAll": {
         "message": "Collapse All"
+    },
+    "activeOrOpen": {
+        "message": "Active/Open"
     }
 }
