--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -51,10 +51,10 @@
         "message": "Create as Parent"
     },
     "ctxMenuNotesCreateAsFirstSubNode": {
-        "message": "Create as Fist Sub Node"
+        "message": "Create as Fist Child"
     },
     "ctxMenuNotesCreateAsLastSubNode": {
-        "message": "Create as Last Sub Node"
+        "message": "Create as Last Child"
     },
     "importPageInfo": {
         "message": "Drag and Drop the nodes below to the Link Map Tree to import the data."
@@ -202,5 +202,8 @@
     },
     "activeOrOpen": {
         "message": "Active/Open"
+    },
+    "save": {
+        "message": "Save"
     }
 }
