[i18n] i18n for copy subtree as text/markdown

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -241,5 +241,11 @@
     },
     "save": {
         "message": "Save"
+    },
+    "copySubtreeAsText": {
+        "message": "Copy Subtree as Text"
+    },
+    "copySubtreeAsMarkdown": {
+        "message": "Copy Subtree as Markdown"
     }
 }
