--- a/public/_locales/zh_CN/messages.json
+++ b/public/_locales/zh_CN/messages.json
@@ -241,5 +241,11 @@
     },
     "save": {
         "message": "保存"
+    },
+    "copySubtreeAsText": {
+        "message": "复制全部为txt"
+    },
+    "copySubtreeAsMarkdown": {
+        "message": "复制全部为Markdown"
     }
 }
