[feature] make auto autoScrollToActiveTab,createNewTabByLevel as options

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -247,5 +247,14 @@
     },
     "copySubtreeAsMarkdown": {
         "message": "Copy Subtree as Markdown"
+    },
+    "options": {
+        "message": "Options"
+    },
+    "autoScrollToActiveTab": {
+        "message": "Auto Scroll to Active Tab"
+    },
+    "createNewTabByLevel": {
+        "message": "Create New Tab by Level"
     }
 }
