[bugfix] fix lack of i18n support for close/delete node in ctx-menu

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -256,5 +256,17 @@
     },
     "createNewTabByLevel": {
         "message": "Create New Tab by Level"
+    },
+    "deleteNode": {
+        "message": "Delete Node"
+    },
+    "deleteSubtree": {
+        "message": "Delete Subtree"
+    },
+    "closeNode": {
+        "message": "Close Node"
+    },
+    "closeSubtree": {
+        "message": "Close Subtree"
     }
 }
